tdf#166862: fix reading data for CRC calculation

Commit a6ad198d097fb4a503c8d5831d484ff46721134b made the size read
from the grabber wrong for the last chunk: it wasn't decreased to
the remaining size, but was still equal to nBlockSize. The grabber
could read past the chunk, and the CRC was wrong. No idea why did
that only hit this file - it seemed that any file larger than 32K
and that was stored (i.e., any image) would trigger that path?

Change-Id: I980dd701e54c4ed565173b5b90ed301bf9b5f719
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186241
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 9727cf785945218a4f06562f4edb657551d25436)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186280
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>